// Copyright (c) 2023 Cisco Systems, Inc. and its affiliates
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http:www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
option go_package="./;awi";
import "sla.proto";
import "common.proto";

// Site Specific
message SiteInfo {
    string name = 1;
    string type = 2; // Branch | DC
    string address = 3; // Physical address 
    string geo_location = 4;
}

message Site {
    string site_id = 1;
    SiteInfo site_info =2;
}

// List messages
message ListSitesRequest {}
message ListSitesResponse {
    repeated Site s = 1;
}

// Get Site 
message GetSiteRequest {
    string site_id = 1;
}

message GetSiteResponse {
    Error err = 1;
    SiteInfo site_info = 2;
}

// Site-to-Site VPN messages
message CreateSiteToSiteVPNRequest {
    string name = 1; 
    Site source = 2;
    Site destination = 3;
    repeated string source_subnets = 4;
    repeated string dest_subnets = 5;
    Network_SLA sla = 6;
}

message VPNStatus {
    Status status = 1;
    string description = 2;
}

message SiteToSiteVPNInfo {
    string vpn_connection_id =1;
    string name = 2;  
    string type = 3; //GRE | IPSec etc.
    string source_ip = 4;
    string dest_ip = 5;
    State state = 6; // up | down  
}

message CreateSiteToSiteVPNResponse {    
    Error err = 1;
    SiteToSiteVPNInfo vpn_info = 2;
    SLAResponse sla_response = 3; //Is there SLA for this connection - what's the sla ? 
}
message DeleteSiteToSiteVPNRequest {
    string vpn_connection_id =1;
}
message DeleteSiteToSiteVPNResponse {
    Error err = 1;
    Status status = 2;
    string description = 3;
}
message ListSitetoSiteVPNRequest {
}
message ListSitetoSiteVPNResponse {
    Error err = 1;
    message SiteToSiteVPN {
        SiteToSiteVPNInfo vpn_info = 1;
        Network_SLA sla_request = 2;
        SLAResponse sla_response = 3; 
    }
    repeated SiteToSiteVPN ss_vpn = 2 ;
}
message SiteToSiteVPNStatusRequest {
    string vpn_connection_id =1;
}
message SiteToSiteVPNStatusResponse {
    Error err = 1;
    VPNStatus status = 2;
}
message SiteToSiteVPNStatisticsRequest {
    Error err = 1;
    string vpn_connection_id =2;
}
message SiteToSiteVPNStatisticsResponse {
    Error err = 1;
    Statistics stat = 2;
}
message SiteToSiteVPNEventsRequest {
    string vpn_connection_id =1;
}

message SiteToSiteVPNEventsResponse {
    Error err = 1;
    Event event = 2;
}
